-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1, 6.8.2
-
None
-
Windows 10
-
-
6ad2918de (dev), 6dbb95e69 (6.9), 86a116482 (6.8), f1d848557 (tqtc/lts-6.5)
When I shut my application down, I'm getting the following assertion failure:
ASSERT: "m_threadId == GetCurrentThreadId()" in file C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qfunctions_win.cpp, line 31
Stack trace:
1 qAbort qassert.cpp 38 0x7ffb480b07aa 2 qt_message_fatal<QString &> qlogging.cpp 2131 0x7ffb480ca1ba 3 qt_message qlogging.cpp 382 0x7ffb480ca088 4 QMessageLogger::fatal qlogging.cpp 885 0x7ffb480c7413 5 qt_assert qassert.cpp 104 0x7ffb480b0669 6 QComHelper::~QComHelper qfunctions_win.cpp 32 0x7ffb48647ef5 7 QNetworkListManagerNetworkInformationBackend::~QNetworkListManagerNetworkInformationBackend qnetworklistmanagernetworkinformationbackend.cpp 145 0x7ffb763e5a46 8 QNetworkListManagerNetworkInformationBackend::`scalar deleting destructor' qnetworklistmanagerd 0x7ffb763e8718 9 std::default_delete<QNetworkInformationBackend>::operator() memory 3139 0x7ffb4faf0fc0 10 std::unique_ptr<QNetworkInformationBackend,std::default_delete<QNetworkInformationBackend>>::~unique_ptr<QNetworkInformationBackend,std::default_delete<QNetworkInformationBackend>> memory 3251 0x7ffb4faf06a3 11 QNetworkInformationPrivate::~QNetworkInformationPrivate Qt6Networkd 0x7ffb4faf06fb 12 QNetworkInformationPrivate::`scalar deleting destructor' Qt6Networkd 0x7ffb4faf1568 13 QScopedPointerDeleter<QObjectData>::cleanup qscopedpointer.h 24 0x7ffb482bea2a 14 QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData>>::~QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData>> qscopedpointer.h 82 0x7ffb482bab91 15 QObject::~QObject qobject.cpp 1147 0x7ffb4829d8b7 16 QNetworkInformation::~QNetworkInformation qnetworkinformation.cpp 530 0x7ffb4fae8464 17 QNetworkInformation::`vector deleting destructor' Qt6Networkd 0x7ffb4faf1127 18 QNetworkInformationDeleter::operator() qnetworkinformation.cpp 26 0x7ffb4faf1080 19 std::unique_ptr<QNetworkInformation,QNetworkInformationDeleter>::reset memory 3286 0x7ffb4faf467f 20 networkInfoCleanup qnetworkinformation.cpp 51 0x7ffb4fae9317 21 qt_call_post_routines qcoreapplication.cpp 341 0x7ffb481e8f9c 22 QApplication::~QApplication qapplication.cpp 670 0x7ffb46f1de70 23 AppQApplication::~AppQApplication fdm 0x7ff751297f04 24 AppQApplication::`scalar deleting destructor' fdm 0x7ff751297f27 25 std::default_delete<AppQApplication>::operator() memory 3302 0x7ff7511d520f 26 std::unique_ptr<AppQApplication,std::default_delete<AppQApplication>>::~unique_ptr<AppQApplication,std::default_delete<AppQApplication>> memory 3412 0x7ff7511d2342 27 App::~App app.cpp 179 0x7ff7511bfe99 28 main main.cpp 163 0x7ff7512918eb 29 qtEntryPoint qtentrypoint_win.cpp 45 0x7ff751e38dca 30 WinMain qtentrypoint_win.cpp 64 0x7ff751e38c7e 31 invoke_main exe_common.inl 107 0x7ff751e37a62 32 __scrt_common_main_seh exe_common.inl 288 0x7ff751e37952 33 __scrt_common_main exe_common.inl 331 0x7ff751e3780e 34 WinMainCRTStartup exe_winmain.cpp 17 0x7ff751e37afe 35 BaseThreadInitThunk KERNEL32 0x7ffbad317374 36 RtlUserThreadStart ntdll 0x7ffbadcdcc91
- is duplicated by
-
QTBUG-129192 [REG 6.6.3->6.7.2] QGuiApplication crashes in destructor
-
- Closed
-
For Gerrit Dashboard: QTBUG-133644 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
624009,2 | QNetworkInfo: Document threading restriction | dev | qt/qtbase | Status: MERGED | +2 | 0 |
624536,2 | QNetworkInfo: Document threading restriction | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
624565,2 | QNetworkInfo: Document threading restriction | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
624571,2 | QNetworkInfo: Document threading restriction | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |